# StateMachineWithDelegates

./: CMakeLists.txt  README.md  main.cpp
Port/: ThreadWin.h  Timer.cpp  UserMsgs.h  WorkerThreadStd.cpp  WorkerThreadStd.h  WorkerThreadWin.h
SelfTest/: CMakeLists.txt  CentrifugeTest.cpp  CentrifugeTest.h  PressureTest.cpp  PressureTest.h  SelfTest.cpp  SelfTest.h  SelfTestEngine.cpp  SelfTestEngine.h
StateMachine/: CMakeLists.txt  StateMachine.h
VS2008/VS2008/: VS2008.vcproj
VS2015/VS2015/: VS2015.vcxproj  VS2015.vcxproj.filters
